# whole-brain-learning-paper

./: .gitignore  00-make_pickle_from_raw_data.ipynb  01-left-right-differences.ipynb  02-promoter-positions.ipynb  03-heatmaps.ipynb  04-Complete-Tensors-by-Filtering-wavelet-denoising-and-imputation.ipynb  05-dropletassay-eccentricity.ipynb  06-Temporal-Components copy.ipynb  07-Neural-components-geometry.ipynb  08-control-theory-framework.ipynb  README.md
Droplet_assay_Liang_et_al/: .gitignore  LICENSE  README.md  __init__.py  analysis.py  auto_roi_detection.py  cli.py  data_saving.py  image_processing.py  main.py  pyproject.toml  setup.py  signal_processing.py
Droplet_assay_Liang_et_al/app/: __init__.py  analyzer.py  cli.py  file_selection.py  roi_selection.py
Droplet_assay_Liang_et_al/gui/: dialogs.py  grouping.py  progress.py  roi.py  splash.py  window_utils.py
